fixed top cutoff problem

--- a/front/stylesheet.css
+++ b/front/stylesheet.css
@@ -8,10 +8,11 @@ ul {
     background-image: url('staffan-kjellvestad-38854.jpg');
     background-size: cover;
     position: absolute;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 100px;
+    transform: translate(-50%);
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding: 100px;
 }
 
 .name {
